# linalg

./: .gitignore  404.html  Cargo.toml  README.md  build.bat  build.sh  debug.sh  for_ved.md  index.html  serve.go  sitemap.xml
.github/workflows/: docs.yaml
Matrices/: FloatsMatrix.html  IntegersMatrix.html  StringsMatrix.html  index.html
One Dimensional/: Floats1d.html  Integers1d.html  Strings1d.html  index.html
One Dimensional/Floats1d/: index.html
One Dimensional/Integers1d/: index.html
One Dimensional/Strings1d/: index.html
Two Dimensional/: index.html
Two Dimensional/Floats2d/: index.html
Two Dimensional/Integers2d/: index.html
Two Dimensional/Strings2d/: index.html
Vectors/: FloatsVector.html  IntegersVector.html  StringsVector.html  index.html
assets/js/: 17896441.649a838b.js  1be78505.348418a7.js  1be78505.3c6c0814.js  216a97d0.b3bf3dca.js  22d2fa7c.3292b213.js  22d2fa7c.68923bb8.js  22d2fa7c.afbc859d.js  22d2fa7c.cdc1ea1d.js  344c5cb5.13a266e5.js  344c5cb5.26b547fe.js  344c5cb5.491b79f0.js  344c5cb5.4a17cc3d.js  344c5cb5.6b2167bb.js  344c5cb5.6cabf46b.js  344c5cb5.98381812.js  344c5cb5.d8ce5a33.js  355f9322.90447527.js  404fe468.571c833d.js  404fe468.667b24ac.js  404fe468.a29f1345.js  404fe468.ddbf7853.js  404fe468.df869e69.js  404fe468.ed5abcc1.js  404fe468.fafdcfba.js  47cadce2.a9c298a4.js  4c91f06b.a26a3730.js  608.29ba4c65.js  644ec5c2.9e189635.js  67c1368b.50fc44bf.js  7b09cd1e.22cf2004.js  7b09cd1e.2b9cf579.js  7b09cd1e.2ce29e7e.js  7b09cd1e.4f6ba71e.js  7b09cd1e.715730ea.js  7b09cd1e.baccb8cf.js  7b09cd1e.d63ffc0b.js  8752bbed.1206dce5.js  8752bbed.23282f1f.js  8752bbed.80596151.js  8752bbed.a112c706.js  (+71 more)
demo/: image-manipulation.html  index.html  knight.html  main.js  mat.csv  matmul.html  package-lock.json  package.json  scratchpad.html  tsconfig.json  vec.csv  vite.config.js
demo/src/: image-manipulation.ts  knight-demo.ts  main.ts  matmul.ts  repl-demo.ts  scratchpad.ts  style.css  utils.ts  worker.js  worker.ts
docs/: docusaurus.config.js
src/: constants.rs  lib.rs  utils.rs
web/: index.html  interactive.html
(+119 files in other folders)
