[package]
authors = ["Archit Bhonsle <abhonsle2000@gmail.com>"]
description = "Linear algebra accelerated by WebAssembly"
edition = "2018"
keywords = ["linear algebra", "vector", "matrix", "machine learning", "ml"]
license = "Apache-2.0"
name = "linalg"
repository = "https://github.com/ml-wasm/linalg"
version = "0.1.5"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
start = []
default = ["console_error_panic_hook", "start"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2.2", features = ["js"] }
js-sys = "0.3"
ndarray = { version = "0.15", features = ["serde", "rayon", "matrixmultiply-threading"] }
ndarray-stats = "0.5"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-rayon = "1.0"
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
